[gd_scene load_steps=3 format=3 uid="uid://bvcgrab6m6yty"]

[ext_resource type="Script" path="res://Scripts/LevelEditor/ObjectManipulator.gd" id="1_2y444"]
[ext_resource type="Texture2D" uid="uid://cd38vahv2xj48" path="res://Assets/Art/LevelEditor/MovementArrows.png" id="1_ujofq"]

[node name="ObjectManipulator" type="Node2D"]
script = ExtResource("1_2y444")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(24, -24)
texture = ExtResource("1_ujofq")

[node name="XAxis" type="TextureButton" parent="."]
offset_left = 2.0
offset_top = -3.0
offset_right = 55.0
offset_bottom = 3.0
mouse_default_cursor_shape = 10
keep_pressed_outside = true

[node name="YAxis" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = -2.0
offset_right = 50.0
offset_bottom = 4.0
rotation = -1.5708
mouse_default_cursor_shape = 9
keep_pressed_outside = true

[node name="Both" type="TextureButton" parent="."]
offset_left = -3.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 3.0
mouse_default_cursor_shape = 6
keep_pressed_outside = true

[node name="Rotation" type="TextureButton" parent="."]
offset_left = 13.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = -12.0
mouse_default_cursor_shape = 2
keep_pressed_outside = true

[connection signal="button_down" from="XAxis" to="." method="_on_x_axis_button_down"]
[connection signal="button_up" from="XAxis" to="." method="_on_x_axis_button_up"]
[connection signal="button_down" from="YAxis" to="." method="_on_y_axis_button_down"]
[connection signal="button_up" from="YAxis" to="." method="_on_y_axis_button_up"]
[connection signal="button_down" from="Both" to="." method="_on_both_button_down"]
[connection signal="button_up" from="Both" to="." method="_on_both_button_up"]
[connection signal="button_down" from="Rotation" to="." method="_on_rotation_button_down"]
[connection signal="button_up" from="Rotation" to="." method="_on_rotation_button_up"]
